test/syntax/fail/not_combinatorial/let_when.sync
type state = S0
let y = true when S0(S0)
